--- a/asst1/prog3_mandelbrot_ispc/Makefile
+++ b/asst1/prog3_mandelbrot_ispc/Makefile
@@ -3,7 +3,8 @@ CXXFLAGS=-I../common -Iobjs/ -O3 -Wall -fPIC -ffp-contract=off
 ISPC=ispc
 # note: requires AVX2
 # disabling AVX2 FMA since it causes a difference in output compared to reference on Mandelbrot 
-ISPCFLAGS=-O3 --target=avx2-i32x8 --arch=x86-64 --opt=disable-fma --pic
+# ISPCFLAGS=-O3 --target=avx2-i32x8 --arch=x86-64 --opt=disable-fma --pic
+ISPCFLAGS=-O3 --target=neon-i32x8 --arch=aarch64 --opt=disable-fma --pic
 
 APP_NAME=mandelbrot_ispc
 OBJDIR=objs
